<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/button2"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/button3"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button4"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/button5"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/button6"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button7"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/button8"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/button9"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/buttonClr"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:text="@string/clr"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonAst"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asterisk"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/button0"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/buttonHash"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hash"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/buttonEnt"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:text="@string/enter"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>